--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -158,9 +158,9 @@ body {
 
   :root {
     --color: #868e96;
-    --color-primary: #478547;
-    --color-secondary: #3b833b;
-    --color-primary-hover: #276827;
+    --color-primary: #4e80c2;
+    --color-secondary: #3b6083;
+    --color-primary-hover: #294672;
     --color-text-primary: #343a40;
     --color-text-secondary: #e2e2e2; 
     --color-text-third: #343a40;
